# bqskit

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  compile_down.py  debug.py  instantiate.py  log_parser.py  log_parser_qsd.py  mul60.qasm  prof_tester.py  pyproject.toml  qfactor_test.py  qfactor_test2.py  qfactor_test_acc.py  qfactor_test_rust.py  qsd_test.py  radix.py  radixnew.py  requirements-dev.txt  requirements.txt  run_all_profs.py  run_all_profs_2.py  script_batch_test.py  script_dmpx_test.py  script_optimize_vus.py  setup.cfg  setup.py  testing_mcr_gates.py  tfxy_5.qasm  treescan_test.py
.github/workflows/: nightly-tests.yml  pre-commit.yml  publish-on-release.yml  tests.yml  tox.yml
bqskit/: __init__.py  __main__.py  _logging.py  _version.py  backend.py  cli.py  executor.py  frontend.py  pass.py  task.py  version.py  workqueue.py
bqskit/compiler/: __init__.py  basepass.py  compile.py  compiler.py  executor.py  gateset.py  machine.py  passbase.py  passdata.py  register.py  registry.py  status.py  task.py  workflow.py  workqueue.py
bqskit/engine/: __init__.py  engine.py  passbase.py  workqueue.py
bqskit/exec/: __init__.py  results.py  runner.py
bqskit/ext/: __init__.py  honeywell.py  quantinuum.py  rigetti.py
bqskit/ir/: __init__.py  cell.py  circuit.py  fixedgate.py  gate.py  instantiater.py  interval.py  iterator.py  location.py  operation.py  point.py  qubitgate.py  region.py  structure.py
bqskit/passes/: __init__.py  alias.py  group.py  measure.py  noop.py
bqskit/qis/: __init__.py  graph.py  pauli.py  pauliz.py  permutation.py  state.py  unitary.py  unitarybuilder.py  unitarymatrix.py
bqskit/runtime/: __init__.py  address.py  attached.py  base.py  detached.py  direction.py  future.py  manager.py  message.py  node.py  result.py  task.py  worker.py
bqskit/tasks/: __init__.py  result.py  status.py
bqskit/test/: __init__.py  strategies.py  strategy.py  types.py
bqskit/utils/: __init__.py  cachedclass.py  citation.py  docs.py  internal.py  math.py  random.py  rotation.py  singleton.py  typing.py
compiler/: compile.py  machine.py  task.py
docs/: api.md  api.rst  conf.py  index.rst  requirements.txt  tutorials
docs/guides/: customgate.md  custompass.md  distributing.md  usegpus.md
docs/intro/: CONTRIBUTING.md  license.md  start.md  start.rst  synthesis.md
docs/source/: bqskit.compiler.passes.control.predicates.rst  bqskit.compiler.passes.control.rst  bqskit.compiler.passes.partitioning.rst  bqskit.compiler.passes.processing.rst  bqskit.compiler.passes.rst  bqskit.compiler.passes.synthesis.rst  bqskit.compiler.passes.util.rst  bqskit.compiler.rst  bqskit.compiler.search.generators.rst  bqskit.compiler.search.heuristics.rst  bqskit.compiler.search.rst  bqskit.ir.Circuit.rst  bqskit.ir.Gate.rst  bqskit.ir.Operation.rst  bqskit.ir.gates.composed.rst  bqskit.ir.gates.constant.rst  bqskit.ir.gates.parameterized.rst  bqskit.ir.gates.rst  bqskit.ir.lang.qasm2.rst  bqskit.ir.lang.rst  bqskit.ir.opt.cost.functions.cost.rst  bqskit.ir.opt.cost.functions.residuals.rst  bqskit.ir.opt.cost.functions.rst  bqskit.ir.opt.cost.rst  bqskit.ir.opt.instantiaters.rst  bqskit.ir.opt.minimizers.rst  bqskit.ir.opt.rst  bqskit.ir.rst  bqskit.qis.rst  bqskit.qis.state.rst  bqskit.qis.unitary.rst  bqskit.rst  bqskit.test.rst  bqskit.utils.rst  compiler.rst  exec.rst  ext.rst  ir.rst  modules.rst  passes.rst  (+3 more)
examples/: compile.py  instantiate.py  optimize.py  pas.py  qfast.py  quest.py  simple_foreachblockpass.py  simple_greedyPartitioner.py  simple_leap.py  simple_qfactor.py  simple_qfast.py  simple_qft_partitioning.py  simple_qpredict.py  simple_qsearch.py  simple_replacement.py  simple_simplepartitioner.py  squander_test.py  squander_test_with_mapping.py  synthesis.py  tfim.qasm
examples/tutorials/: BQSKit IR Introduction.ipynb  Introduction to BQSKit IR.ipynb  Partitioning and Optimization.ipynb  Search Synthesis.ipynb  Searchless Synthesis.ipynb  heisenberg-16-20.qasm  tfim-16-20.qasm
exec/: results.py
exec/runners/: __init__.py  sim.py
ext/: __init__.py  honeywell.py  supermarq.py
ext/cirq/: models.py
ext/qiskit/: models.py  translate.py
ir/: circuit.py  gate.py  operation.py  point.py  region.py
ir/gates/: __init__.py  circuitgate.py
ir/lang/: __init__.py
ir/opt/: __init__.py  instantiater.py
passes/: __init__.py
passes/control/: foreach.py  ifthenelse.py  predicate.py
passes/io/: intermediate.py
passes/mapping/: pam.py  sabre.py
passes/partitioning/: greedy.py  scan.py
passes/processing/: rebase.py
passes/rules/: __init__.py  ch2cnot.py  cnot2ch.py  cnot2cy.py  cnot2cz.py  cy2cnot.py  cz2cnot.py  swap2cnot.py  u3.py  zxzxz.py
passes/search/: generator.py
passes/synthesis/: qfast.py  qpredict.py
passes/util/: __init__.py  compress.py  conversion.py  converttou3.py  extend.py  fill.py
pytest/: test_instantiate_partitioner.py
qis/: __init__.py  graph.py  permutation.py
qis/state/: statemap.py
qis/unitary/: __init__.py  differentiable.py  meta.py  optimizable.py  unitary.py  unitarymatrix.py
runtime/: attached.py  detached.py
scratch/: fold_bug.py  output.txt  partitioning.py
scratch/temp/: part1  part10  part11  part12  part13  part14  part2  part3  part4  part5  part6  part7  part8  part9  qft_2  qft_3  qft_4  qft_5  qft_minimal
test_files/: decompose_5qubit2mqs.csv  decompose_all.csv  decompose_all_mqs.csv  decompose_parallel_test.csv  decompose_twice.csv  qsd_test.py
tests/: conftest.py  nbval_sanitize.cfg  test_conftest.py  test_runtime.py
tests/bqskitrs/: test_grad.py
tests/compiler/: __init__.py  test_compiler.py  test_data.py  test_gateset.py  test_machine.py  test_register.py  test_registry.py  test_simplepartitioner.py
tests/exec/: test_exec.py
tests/ext/: test_cirq.py  test_pytket.py  test_qiskit.py  test_qutip.py
tests/ir/: test_circuit.py  test_gate.py  test_interval.py  test_inverse.py  test_iterator.py  test_location.py  test_machine.py  test_operation.py  test_point.py  test_region.py  test_structure.py
utils/: cachedclass.py  math.py
(+874 files in other folders)
