[metadata]
name = bqskit
version = 0.1.0
description = Berkeley Quantum Synthesis Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BQSKit/bqskit
author = LBNL - BQSKit developers
author_email = edyounis@lbl.gov
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Quantum Computing
    Topic :: Software Development :: Compilers
    Typing :: Typed
keywords = berkeley quantum synthesis toolkit partitioning
project_urls =
    Bug Tracker = https://github.com/BQSKit/bqskit/issues
    Source Code = https://github.com/BQSKit/bqskit

[options]
packages = find:
install_requires =
    numpy>=1.16.6
    scipy>=1.4.1
    typing_extensions;python_version < "3.8"
python_requires = >=3.6, <4

[options.packages.find]
exclude =
    tests
    examples

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 2.8
testpaths = tests/
python_files = test*.py
norecursedirs = .env

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tox:tox]
minversion = 3.3.0
envlist = py36,py37,py38,py39,pre-commit
skip_missing_interpreters = true

[testenv]
passenv =
    TERM
deps =
    numpy>=1.20
    pytest>=2.8
commands =
    pytest {posargs}

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
