[metadata]
name = bqskit
version = 1.0.0a1
description = Berkeley Quantum Synthesis Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BQSKit/bqskit
author = LBNL - BQSKit developers
author_email = edyounis@lbl.gov
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Compilers
    Typing :: Typed
keywords = berkeley quantum synthesis toolkit partitioning
project_urls =
    Bug Tracker = https://github.com/BQSKit/bqskit/issues
    Source Code = https://github.com/BQSKit/bqskit

[options]
packages = find:
install_requires =
    bqskitrs>=0.2.3
    dask[distributed]>=2022.07.01
    lark-parser
    numpy>=1.22.0
    scipy>=1.8.0
    threadpoolctl
    typing-extensions>=4.0.0
python_requires = >=3.8, <4

[options.packages.find]
exclude =
    tests
    examples

[options.extras_require]
dev =
    hypothesis
    mypy
    pre-commit
    pytest
    tox
ext =
    cirq
    pytket
    qiskit

[bdist_wheel]
universal = 1

[tool:pytest]
minversion = 2.8
testpaths = tests/
python_files = test*.py
norecursedirs = .env

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
allow_redefinition = true
warn_redundant_casts = true
warn_unused_ignores = true
pretty = true
plugins = numpy.typing.mypy_plugin

[tox:tox]
minversion = 3.3.0
envlist = pre-commit,py38,py39,py310
skip_missing_interpreters = true

[testenv]
passenv =
    TERM
deps =
    numpy>=1.22
    pytest>=2.8
    hypothesis[numpy,zoneinfo]>=6.14.5
    qiskit>=0.37.1
commands =
    pytest {posargs}

[testenv:pre-commit]
skip_install = true
deps = pre-commit
commands = pre-commit run --all-files --show-diff-on-failure
